syntax = "proto3";

package smarthome;

option java_multiple_files = true;
option java_package = "com.smarthome.proto";
option java_outer_classname = "BlindProto";

// Blind Service
service BlindService {
  rpc TurnOn(BlindTurnOnRequest) returns (BlindTurnOnResponse);
  rpc TurnOff(BlindTurnOffRequest) returns (BlindTurnOffResponse);
  rpc Open(BlindOpenRequest) returns (BlindOpenResponse);
  rpc Close(BlindCloseRequest) returns (BlindCloseResponse);
  rpc SetPosition(SetPositionRequest) returns (SetPositionResponse);
  rpc GetStatus(BlindGetStatusRequest) returns (BlindGetStatusResponse);
}

message BlindTurnOnRequest {}

message BlindTurnOnResponse {
  bool success = 1;
  string message = 2;
}

message BlindTurnOffRequest {}

message BlindTurnOffResponse {
  bool success = 1;
  string message = 2;
}

message BlindOpenRequest {}

message BlindOpenResponse {
  bool success = 1;
  string message = 2;
}

message BlindCloseRequest {}

message BlindCloseResponse {
  bool success = 1;
  string message = 2;
}

message SetPositionRequest {
  int32 position = 1; // 0-100 (0=closed, 100=open)
}

message SetPositionResponse {
  bool success = 1;
  string message = 2;
}

message BlindGetStatusRequest {}

message BlindGetStatusResponse {
  int32 position = 1; // 0-100
  bool is_moving = 2;
}